# dotfiles

./: Makefile  README.md  install.py  install.sh
.github/workflow/: cd.yml
.github/workflows/: ci.yml
configs/alacritty/: alacritty.toml  font.toml
configs/kitty/: kitty.conf
configs/leftwm/: config.ron
configs/nvim/: init.lua  lazy-lock.json  vimrc
configs/polybar/: config.ini
configs/rofi/: theme.rasi
configs/tmux/: conf
configs/vim/: vimrc
configs/xorg/: xinitrc
configs/zsh/: zshrc
home/: .Xresources  .ideavimrc  .p10k.zsh  .taskrc  .tmux.conf  .xinitrc  .zgen-setup  .zsh_aliases  .zsh_functions  .zshrc
home/.config/: picom.conf
home/.dbus/: battery-level.sh
home/.emacs.d/: init.el
home/.scripts/: doall  focker
home/.vim/: cscope.cfg  vimrc
install/: install.py  requirements.txt
install/arch/: i3.py  (+5 more)
models/: ag.json  alacritty.json  asdf.json  fzf.json  kitty.json  leftwm.json  neovim.json  nodejs.json  rg.json  rust.json  tmux.json  zsh.json
schemas/: model.json
setup-arch/: gnome.dconf  gnome.py  go.py  i3.py  module.py  neovim.py  nodejs.py  rust.py  scripts.py  setup.py  task.py  tmux.py  zsh.py
setup-debian/: neovim.py  nodejs.py  setup.py  zsh.py
setup-macos/: asdf.py  emacs.py  kitty.py  module.py  neovim.py  nodejs.py  ruby.py  rust.py  setup.py
setup-pop/: gnome.dconf  gnome.py  neovim.py  nodejs.py  setup.py  tmux.py  zsh.py
wizard/: Cargo.toml
wizard/src/: models.rs  views.rs
wizard/src/models/: cmd.rs  config.rs  install.rs
wizard/src/views/: install.rs  list.rs  uninstall.rs
wizzard/: Cargo.toml
(+91 files in other folders)
