[package]
name = "wizard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
inquire = "0.7"
json_value_merge = "2.0"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.0"
sys-info = "0.9"
tap = "1.0"
